<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AboutFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="80sp"
        android:layout_marginTop="20sp"
        android:gravity="center_horizontal"
        android:text="@string/aboutText"
        android:textSize="20sp"
        android:textStyle="bold" />


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:layout_marginHorizontal="30sp"
        app:cardCornerRadius="10sp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="10sp"
            android:layout_margin="10sp"
            android:text="@string/app_name"
            android:textSize="18sp" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:layout_marginHorizontal="30sp"
        app:cardCornerRadius="10sp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10sp"
            android:text="@string/aboutTxt" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="75sp"
        android:layout_marginTop="20sp"
        android:padding="10sp"
        android:layout_marginHorizontal="30sp"
        app:cardCornerRadius="10sp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10sp"
            android:layout_margin="10sp"
            android:layout_gravity="center_horizontal"
            android:text="@string/developerName" />

        <TextView
            android:id="@+id/developerContact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/developerWebsite"
            android:layout_margin="10sp"
            android:gravity="center_horizontal"
            android:layout_gravity="bottom" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20sp"
        android:text="@string/copyrightText"
        android:layout_gravity="center_horizontal" />

</LinearLayout>