<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/registerMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="60sp"
        android:layout_height="60sp"
        android:layout_centerInParent="true"
        android:layout_marginTop="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/app_logo1"
        android:contentDescription="@string/app_logo" />

    <TextView
        android:id="@+id/tvAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="5sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgLogo" />


    <TextView
        android:id="@+id/txtRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40sp"
        android:layout_marginHorizontal="35sp"
        android:text="Register"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAppName" />

    <LinearLayout
        android:id="@+id/regHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="30sp"
        android:layout_marginTop="20sp"
        app:layout_constraintTop_toBottomOf="@+id/txtRegister"
        android:baselineAligned="false">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5sp"
            android:layout_weight="1">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etRollNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Roll No :"
                android:maxLines="10"
                android:inputType="number"
                android:autofillHints="" />
        </com.google.android.material.textfield.TextInputLayout>

        <Spinner
            android:id="@+id/spinnerClass"
            android:layout_width="match_parent"
            android:layout_height="54sp"
            android:layout_marginStart="5sp"
            android:layout_weight="1" />

        <!--        <com.google.android.material.textfield.TextInputLayout-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_marginStart="5sp"-->
        <!--            android:layout_weight="1">-->

        <!--            <com.google.android.material.textfield.TextInputEditText-->
        <!--                android:id="@+id/etClass"-->
        <!--                android:layout_width="match_parent"-->
        <!--                android:layout_height="wrap_content"-->
        <!--                android:hint="Class :"-->
        <!--                android:inputType="text"-->
        <!--                android:autofillHints="" />-->
        <!--        </com.google.android.material.textfield.TextInputLayout>-->

    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30sp"
        android:layout_marginTop="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regHorizontal"
        app:startIconDrawable="@drawable/outline_person_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etFullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="name"
            android:hint="Full Name :"
            android:inputType="textPersonName" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30sp"
        android:layout_marginTop="18sp"
        app:startIconDrawable="@drawable/outline_email_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nameLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Email :"
            android:inputType="textEmailAddress"
            android:autofillHints="emailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30sp"
        android:layout_marginTop="18sp"
        app:startIconDrawable="@drawable/outline_lock_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailLayout"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Password :"
            android:inputType="textPassword"
            android:autofillHints="password" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/registerBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30sp"
        android:layout_marginTop="20sp"
        android:text="Register"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordLayout" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remember_login_cred"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registerBtn" />

    <TextView
        android:id="@+id/tvBackToLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60sp"
        android:textStyle="bold"
        android:text="ALREADY HAVE ACCOUNT?, LOG IN!"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerBtn" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2sp"
        android:layout_marginHorizontal="60sp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="@+id/tvBackToLogin"
        app:layout_constraintStart_toStartOf="@+id/tvBackToLogin"
        app:layout_constraintTop_toBottomOf="@+id/tvBackToLogin"
        tools:ignore="SmallSp" />

</androidx.constraintlayout.widget.ConstraintLayout>